# cuda_workshops

./: .gitignore  README.md
W1_VectorAdd/: CMakeLists.txt  Makefile  README.txt
W1_VectorAdd/src/: main.cu
W2_PointHash/: CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  pointHash
W2_PointHash/src/: main.cu
W3_CellOccupancy/: CMakeLists.txt  Makefile  Makefile.bak  README.txt  gridOcc
W3_CellOccupancy/src/: main.cu
W4_Tesselation/: CMakeLists.txt  Makefile  README.txt
W4_Tesselation/include/: teapot.h
W4_Tesselation/src/: main.cu
W5_OpenGL/: CMakeLists.txt  Makefile  Makefile.linux  README.txt
W5_OpenGL/include/: trackball.h
W5_OpenGL/shaders/: phong.fs
W5_OpenGL/src/: main.cu  main.cu~  trackball.cpp
W6_Reduce/: CMakeLists.txt  Makefile  Makefile.bak  README.txt  reduce
W6_Reduce/src/: main.cu
W7_NearestNeighbour/: CMakeLists.txt  Makefile
W7_NearestNeighbour/src/: main.cu
W8_SignedDistanceField/: CMakeLists.txt  Makefile  Makefile.linux  README.txt
W8_SignedDistanceField/src/: main.cu  main_solved.cu
rand/: rand.pro
rand/cudasrc/: random.cu  random.cuh
rand/src/: main.cpp
reduceCPU/: mainCPU.cpp  reduce.pro
reduceGPU/: CMakeLists.txt  Makefile
reduceGPU/src/: main.cu
